fix: primary bg with showing header UI results in invisible links

--- a/less/forum.less
+++ b/less/forum.less
@@ -46,6 +46,14 @@
     }
   }
 
+  &--showHeader {
+    @media @tablet-up {
+      .Header-title {
+        float: left;
+      }
+    }
+  }
+
   @media @phone {
     .App-content {
       background-color: transparent;
